[package]
name = "url-scraper"
version = "0.1.7"
description = "Simple HTML URL scraper"
repository = "https://github.com/pop-os/url-scraper"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["url", "scraper"]
categories = ["web-programming"]
edition = "2021"

[dependencies]
reqwest = "0.12"
scraper = "0.19.0"
url = "2.5.1"

[dev-dependencies]
tokio = "1"
