[package]
name = "url-scraper"
version = "0.1.8"
description = "Simple HTML URL scraper"
repository = "https://github.com/pop-os/url-scraper"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["url", "scraper"]
categories = ["web-programming"]
edition = "2021"

[dependencies]
reqwest = "0.12.5"
scraper = "0.20.0"
url = "2.5.2"

[dev-dependencies]
tokio = "1"
